--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.20",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.9",
+    "hardhat": "^2.22.10",
     "next": "14.2.9",
     "postcss": "8.4.45",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.10"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0"
   }
 }
